Added mathdefinitions header file

--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="mat2.h" />
     <ClInclude Include="mat3.h" />
     <ClInclude Include="mat4.h" />
+    <ClInclude Include="mathdefinitions.h" />
     <ClInclude Include="maths.h" />
     <ClInclude Include="vec2.h" />
     <ClInclude Include="vec3.h" />
