--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj.filters
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Header Files\Maths">
       <UniqueIdentifier>{9e7fd99d-4880-400d-a98a-45c905bffe04}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Shader Files">
+      <UniqueIdentifier>{7168bd13-fd37-4d7d-9c2e-112c922e4e47}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp">
@@ -41,6 +44,9 @@
     </ClCompile>
     <ClCompile Include="vec4.cpp">
       <Filter>Source Files\Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="shader.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -71,5 +77,16 @@
     <ClInclude Include="mathdefinitions.h">
       <Filter>Header Files\Maths</Filter>
     </ClInclude>
+    <ClInclude Include="shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="vertex.shader">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="fragment.shader">
+      <Filter>Shader Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
