--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
@@ -25,6 +25,8 @@
     <ClCompile Include="mat3.cpp" />
     <ClCompile Include="mat4.cpp" />
     <ClCompile Include="shader.cpp" />
+    <ClCompile Include="stb_image.cpp" />
+    <ClCompile Include="texture.cpp" />
     <ClCompile Include="vec2.cpp" />
     <ClCompile Include="vec3.cpp" />
     <ClCompile Include="vec4.cpp" />
@@ -37,6 +39,8 @@
     <ClInclude Include="mathdefinitions.h" />
     <ClInclude Include="maths.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="texture.h" />
     <ClInclude Include="vec2.h" />
     <ClInclude Include="vec3.h" />
     <ClInclude Include="vec4.h" />
