--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
@@ -49,6 +49,9 @@
     <None Include="fragment.shader" />
     <None Include="vertex.shader" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="stones.jpg" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{B15AD13E-8A6E-4897-AB9A-1B1F665F7A85}</ProjectGuid>
