--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj.filters
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj.filters
@@ -1,121 +1,114 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="RenderEngine">
+      <UniqueIdentifier>{2ace87b4-15fe-4132-a2c4-954529db6046}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="Shaders">
+      <UniqueIdentifier>{7168bd13-fd37-4d7d-9c2e-112c922e4e47}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Resource Files">
+    <Filter Include="Maths">
+      <UniqueIdentifier>{59e77fca-2626-40c9-986f-5c70f9fbc769}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Textures">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source Files\Maths">
-      <UniqueIdentifier>{2d76fccc-bf0b-4169-ac65-553767a89fd7}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Maths">
-      <UniqueIdentifier>{9e7fd99d-4880-400d-a98a-45c905bffe04}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Shader Files">
-      <UniqueIdentifier>{7168bd13-fd37-4d7d-9c2e-112c922e4e47}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\Textures">
-      <UniqueIdentifier>{9f013a4c-f69f-48fe-9b2a-e7288f2bfdd2}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="mat2.cpp">
-      <Filter>Source Files\Maths</Filter>
-    </ClCompile>
-    <ClCompile Include="mat3.cpp">
-      <Filter>Source Files\Maths</Filter>
-    </ClCompile>
-    <ClCompile Include="mat4.cpp">
-      <Filter>Source Files\Maths</Filter>
-    </ClCompile>
-    <ClCompile Include="vec2.cpp">
-      <Filter>Source Files\Maths</Filter>
-    </ClCompile>
-    <ClCompile Include="vec3.cpp">
-      <Filter>Source Files\Maths</Filter>
-    </ClCompile>
-    <ClCompile Include="vec4.cpp">
-      <Filter>Source Files\Maths</Filter>
+    <ClCompile Include="display.cpp">
+      <Filter>RenderEngine</Filter>
     </ClCompile>
     <ClCompile Include="shader.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Shaders</Filter>
     </ClCompile>
-    <ClCompile Include="camera.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="vec4.cpp">
+      <Filter>Maths</Filter>
     </ClCompile>
-    <ClCompile Include="texture.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="vec3.cpp">
+      <Filter>Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="vec2.cpp">
+      <Filter>Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="mat4.cpp">
+      <Filter>Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="mat3.cpp">
+      <Filter>Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="mat2.cpp">
+      <Filter>Maths</Filter>
     </ClCompile>
     <ClCompile Include="stb_image.c">
-      <Filter>Source Files</Filter>
+      <Filter>Textures</Filter>
     </ClCompile>
-    <ClCompile Include="window.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="texture.cpp">
+      <Filter>Textures</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="camera.cpp">
+      <Filter>RenderEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="rawmodel.cpp">
+      <Filter>RenderEngine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stb_image.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="texture.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="display.hpp">
+      <Filter>RenderEngine</Filter>
     </ClInclude>
     <ClInclude Include="shader.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="camera.hpp">
-      <Filter>Header Files</Filter>
+      <Filter>Shaders</Filter>
     </ClInclude>
     <ClInclude Include="vec4.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
     <ClInclude Include="vec3.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
     <ClInclude Include="vec2.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
     <ClInclude Include="maths.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
     <ClInclude Include="mathdefinitions.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
     <ClInclude Include="mat4.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
     <ClInclude Include="mat3.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
     <ClInclude Include="mat2.hpp">
-      <Filter>Header Files\Maths</Filter>
+      <Filter>Maths</Filter>
     </ClInclude>
-    <ClInclude Include="window.hpp">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="stb_image.h">
+      <Filter>Textures</Filter>
+    </ClInclude>
+    <ClInclude Include="texture.hpp">
+      <Filter>Textures</Filter>
+    </ClInclude>
+    <ClInclude Include="camera.hpp">
+      <Filter>RenderEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="rawmodel.hpp">
+      <Filter>RenderEngine</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="vertex.shader">
-      <Filter>Shader Files</Filter>
+      <Filter>Shaders</Filter>
     </None>
     <None Include="fragment.shader">
-      <Filter>Shader Files</Filter>
+      <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="stones.jpg">
-      <Filter>Resource Files\Textures</Filter>
+      <Filter>Textures</Filter>
     </Image>
   </ItemGroup>
 </Project>
