--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
@@ -19,13 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="cube.cpp" />
+    <ClCompile Include="entity.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="display.cpp" />
     <ClCompile Include="mat2.cpp" />
     <ClCompile Include="mat3.cpp" />
     <ClCompile Include="mat4.cpp" />
-    <ClCompile Include="rawmodel.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="stb_image.c" />
     <ClCompile Include="texture.cpp" />
@@ -35,13 +36,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.hpp" />
+    <ClInclude Include="cube.hpp" />
     <ClInclude Include="display.hpp" />
+    <ClInclude Include="entity.hpp" />
     <ClInclude Include="mat2.hpp" />
     <ClInclude Include="mat3.hpp" />
     <ClInclude Include="mat4.hpp" />
     <ClInclude Include="mathdefinitions.hpp" />
     <ClInclude Include="maths.hpp" />
-    <ClInclude Include="rawmodel.hpp" />
     <ClInclude Include="shader.hpp" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="texture.hpp" />
