--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="index_buffer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="camera.cpp" />
@@ -39,6 +40,7 @@
     <ClInclude Include="camera.h" />
     <ClInclude Include="comm.h" />
     <ClInclude Include="display.h" />
+    <ClInclude Include="Entity.h" />
     <ClInclude Include="vertex_array.h" />
     <ClInclude Include="index_buffer.h" />
     <ClInclude Include="mat2.h" />
