Deleted old way of creating a sphere (because lighting and textures didn't work on them correctly). Instead, a .obj file loader has been implemented. A simple icosphere made from Blender has been successfully loaded, and the lighting and textures now work much better.

--- a/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
+++ b/OpenGL_Game/OpenGL_Game/OpenGL_Game.vcxproj
@@ -68,6 +68,7 @@
     <ClInclude Include="vec4.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="resources\models\icosphere.model" />
     <None Include="resources\textures\noise5.ex5" />
     <None Include="shaders\cubemap_frag.shader" />
     <None Include="shaders\cubemap_vert.shader" />
